fix: eliminate initial screen flicker

--- a/src/components/welcome/welcome.scss
+++ b/src/components/welcome/welcome.scss
@@ -4,10 +4,9 @@
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 1000;
+    z-index: 100;
     min-height: 100vh;
     background: var(--colors-background) url('/images/bg-star.png') repeat center center;
-    overflow: hidden;
     -webkit-font-smoothing: antialiased;
     animation: hideWelcome 0.5s 3.5s ease forwards; // Add this line
   }
@@ -111,20 +110,18 @@
 
   @keyframes materia {
     0% {
-      background: #039be5;
-    //   width: 15rem;
-    //   height: 15rem;
     }
     50% {
-      background: #039be5;
       top: 50%;
       left: 50%;
+      width: 15rem;
+        height: 15rem;
     }
     100% {
       background: #311b92;
       top: 2rem;
       left: 2.2rem;
-      @apply w-10 h-10;
+      @apply w-14 h-14;
     }
   }
 
@@ -141,6 +138,9 @@
     0% {
         opacity: 1;
     }
+    // 50% {
+    //     opacity: 0.3;
+    // }
     100% {
         opacity: 0;
         pointer-events: none;
